contrib/cnd.modelimpl/test/unit/data/goldenfiles/org/netbeans/modules/cnd/modelimpl/trace/FileModel3Test/preproc_concat_error.cc.clank.err
${origin}/preproc_concat_error.cc:2:20: error: '#' is not followed by a macro parameter
#define FUNC(a)  # b
                   ^
